<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name"> 礦癮 </string>
    <string name="have_sms"> 已收到簡訊 </string>
    <string name="app_status"> APP狀態: %s </string>
    <string name="app_status_open"> -開啟- </string>
    <string name="app_status_close"> -關閉- </string>
    <string name="app_back_start"> 後台執行 </string>
    <string name="app_register"> 註冊接收器... </string>
    <string name="app_un_register"> 撤銷接收器... </string>
    <string name="app_get_sms"> 已擷取到簡訊 </string>
    <string name="app_get_unsms"> 未擷取到簡訊... </string>
    <string name="app_post_sms"> POST成功 </string>
    <string name="app_analyze_sms"> 簡訊: %s </string>
    <string name="app_post_send"> 偵測- %s POST. </string>
    <string name="app_all_sms_end"> 偵測-END. </string>
    <string name="app_post_send_unsuccess"> 手機簡訊偵測 -發送尚未結束 </string>
    <string name="app_clear_record"> 清除紀錄 </string>
    <string name="app_re_conn"> 重新建立 post程序連線 </string>
    <string name="app_openpost_conn"> 開啟post程序... </string>
    <string name="app_closepost_conn"> 關閉post程序... </string>
    <string name="app_runpost_conn"> post程序-執行中... </string>
    <string name="app_et"> 設定不能為空值 </string>
    <string name="app_test_register"> 註冊測試接收器... </string>
    <string name="app_test_unregister"> 撤銷測試接收器... </string>
    <string name="app_test_sms"> 收到測試訊息: %s </string>
    <string name="app_hr"> --------------------------------------------------------- </string>
    <string name="sms_200_success">簡訊送出成功!!</string>
    <string name="http_errors">連線逾時，請確認網路環境!!</string>
    <string name="register_btn_login">登入</string>
    <string name="register_btn_clickregister">點擊註冊</string>
    <string name="register_btn_checkphone">點擊取得手機驗證碼</string>
    <string name="register_ed_account">請輸入帳號</string>
    <string name="register_ed_name">請輸入姓名</string>
    <string name="register_ed_phone">請輸入手機</string>
    <string name="register_ed_phonecheckcode">請輸入手機驗證碼</string>
    <string name="register_ed_password">請設定密碼</string>
    <string name="register_ed_safepass">請設定安全密碼</string>
    <string name="register_ed_invite">請輸入邀請碼</string>
    <string name="register_ed_checkcode">請輸入驗證碼</string>
    <string name="https_register_null"> 所有資料必須輸入 </string>
    <string name="https_register_errors"> 註冊失敗 </string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="login_btn_register">註冊</string>
    <string name="login_btn_clicklogin">點擊登入</string>
    <string name="login_ed_account">請輸入帳號</string>
    <string name="login_ed_password">請輸入密碼</string>
    <string name="login_btn_forgot_password">忘記密碼</string>
    <string name="https_login_success"> 登入成功 </string>
    <string name="https_again_login"> 請重新登入 </string>
    <string name="https_logout_success"> 登出成功 </string>
    <string name="https_login_null"> 帳號或密碼必須輸入 </string>
    <string name="https_login_errors"> 登入失敗 </string>
    <string name="https_login_api_err"> 伺服器維護中，請查看公告 </string>
    <string name="https_login_res_err"> 回應解析錯誤，請回報客服 </string>
    <string name="member_no"> 未激活 </string>
    <string name="member_lv0"> 會員 </string>
    <string name="member_lv1"> 代理 </string>
    <string name="member_lv2"> 經理 </string>
    <string name="member_lv3"> 總監 </string>
    <string name="member_lv4"> 副總 </string>
    <string name="member_IB"> IB </string>
    <string name="member_BIB"> BIB </string>
    <string name="member_SIB"> SIB </string>
    <string name="member_GIB"> GIB </string>
    <string name="bottom_home">首頁</string>
    <string name="bottom_mission">任務</string>
    <string name="bottom_share">分享</string>
    <string name="bottom_member">會員</string>
    <string name="app_default_loading"> 公告: loading... </string>
    <string name="app_loading"> loading... </string>
    <string name="app_top_title"> ID:%s </string>
    <string name="top_share">  分享</string>
    <string name="top_recharge"> 充值 </string>
    <string name="top_minning"> 每日挖礦 </string>
    <string name="top_reinvest"> 復投 </string>
    <string name="top_mission"> 任務 </string>
    <string name="top_withdrawal"> 轉幣 </string>
    <string name="top_forget_password"> 忘記密碼 </string>
    <string name="top_change_password"> 修改密碼 </string>
    <string name="top_my"> 會員 </string>
    <string name="register_phone_err"> 手機號碼必須輸入或是手機格式錯誤 </string>
    <string name="register_phone_spend"> 手機驗證碼已送出 </string>
    <string name="register_phone_respend"> 請等待2分鐘後，再重新取得 </string>
    <string name="register_err_account"> 帳號必須輸入並大於6個字元 </string>
    <string name="register_err_phone"> 手機必須輸入或手機格式錯誤 </string>
    <string name="register_err_pass"> 密碼必須輸入並大於6個字元 </string>
    <string name="register_err_safepass"> 安全密碼必須輸入並大於6個字元 </string>
    <string name="register_errs"> 欄位必須輸入 </string>
    <string name="register_success"> 註冊成功 </string>
    <string name="home_coin_total">總資產 %s USD</string>
    <string name="home_coin_title">總資產</string>
    <string name="home_coin_USD">USD</string>
    <string name="home_message">公告:</string>
    <string name="home_basic">算力積分</string>
    <string name="home_promotion">收益錢包</string>
    <string name="home_point">點</string>
    <string name="home_USDT">USDT</string>
    <string name="home_USD">USD</string>
    <string name="home_day_get_coin">點擊領取每日挖礦</string>
    <string name="home_member">會員</string>
    <string name="home_real_recharge">已充值 %s USDT</string>
    <string name="change_password_title">修改密碼</string>
    <string name="change_password">請設定密碼</string>
    <string name="change_password2">再設定一次密碼</string>
    <string name="change_password_again_check">2次密碼輸入不相同</string>
    <string name="change_password_ok">確認修改</string>
    <string name="change_password_success">已修改成功</string>
    <string name="mission_push">直推人數</string>
    <string name="mission_invite">邀請人數</string>
    <string name="mission_start_time">開始時間: %s</string>
    <string name="mission_end_time">結束時間: %s</string>
    <string name="mission_open_award">已激活獎勵: </string>
    <string name="mission_title">活動說明: </string>
    <string name="mission_content">再指定任務時間內，第一代下線會員激活成功，將達成直推一人。任務完成後，將再下個月開始啟動，自動計算提高會員每日領取額度。</string>
    <string name="mission_award_list"> -任務階段列表- </string>
    <string name="mission_award_success"> 達成 </string>
    <string name="mission_award_unsuccess"> 未達成 </string>
    <string name="mission_award_no"> 無 </string>
    <string name="mission_award_content1"> 會員代數:%s代. 每日領取加速:%s. </string>
    <string name="mission_award_content2"> 直推人數 %s人. </string>
    <string name="recharge_title"> 充值 </string>
    <string name="recharge_rule"> 充值條約 </string>
    <string name="recharge_r1_title"> 積分充值 </string>
    <string name="recharge_address_title"> 充值地址 </string>
    <string name="recharge_r1_t1"> 請不要充值其他非USDT加密貨幣 </string>
    <string name="recharge_c1"> *TRC20錢包地址 </string>
    <string name="recharge_c2"> *請再30分鐘內完成充值 </string>
    <string name="recharge_c3"> *充值算力積分，代表已同意充值合約條款 </string>
    <string name="recharge_copy_addr"> 點擊複製充值地址 </string>
    <string name="recharge_success"> 充值完成 </string>
</resources>