<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ly_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="30dp"
            android:orientation="vertical">
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"

            android:gravity="center"
            android:text="@string/recharge_r1_title"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/img_addr_QR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:srcCompat="@drawable/loading"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"

            android:gravity="center"
            android:text="@string/recharge_address_title"
            android:textSize="17dp"
            android:textColor="@color/teal_208143"
            android:textStyle="bold"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:orientation="vertical"

                    android:paddingLeft="10dp"
                    android:paddingTop="20dp"
                    android:paddingRight="10dp"

                    android:layout_marginBottom="30dp"
                    >

                    <TextView
                        android:id="@+id/tv_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"

                        android:background="@color/white_100"
                        android:paddingLeft="10dp"
                        android:paddingTop="7dp"
                        android:paddingBottom="7dp"

                        android:singleLine="true"
                        android:text="@string/app_loading"
                        android:textColor="@color/black_100"
                        android:textSize="15dp" />
                    <Button
                        android:id="@+id/btn_addr_copy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/btn_round_325551"

                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"

                        android:text="@string/recharge_copy_addr"
                        android:textColor="@color/white"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/textView15"
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="15dp"
                        android:layout_marginLeft="15dp"

                        android:gravity="left"
                        android:text="@string/recharge_r1_t1"
                        android:textColor="@color/black_100"
                        android:textSize="17dp"
                        />
                    <TextView
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:layout_marginLeft="15dp"

                        android:gravity="left"
                        android:text="@string/recharge_c1"
                        android:textColor="@color/red_f44336"
                        android:textSize="15dp"
                        />
                    <TextView
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:layout_marginLeft="15dp"

                        android:gravity="left"
                        android:text="@string/recharge_c2"
                        android:textColor="@color/red_f44336"
                        android:textSize="15dp"
                        />
                    <TextView
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="20dp"
                        android:layout_marginLeft="15dp"

                        android:gravity="left"
                        android:text="@string/recharge_c3"
                        android:textColor="@color/red_f44336"
                        android:textSize="15dp"
                        />

                    <Button
                        android:id="@+id/btn_recharge_ok"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="70dp"
                        android:layout_marginBottom="20dp"



                        android:layout_weight="1"
                        android:background="@drawable/btn_round_325551"

                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"

                        android:text="@string/recharge_success"
                        android:textColor="@color/white"
                        android:textSize="18dp" />

                </LinearLayout>




            </LinearLayout>
        </ScrollView>



    </LinearLayout>
</LinearLayout>